Styling and fixes for various pages (#34)
* fix: Made create call button aligned with the chat header, which looks better

* style: minor adjustments for  video conference call styling, including adjusting participant view size and text font.

* style: Adjusted styling for home page, grid now wraps and navbar is seperate from home page div

* fix: Fixed message input being offscreen in chat

--- a/ULearn/src/Pages/Home/homePage.css
+++ b/ULearn/src/Pages/Home/homePage.css
@@ -1,18 +1,14 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
 .homepage-wrapper {
   padding: 20px;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 400px;
 }
 
 .homepage-header-main {
-  display: flex;
-  justify-content: center;
   font-size: 30px;
-
 }
 
 .homepage-tabs-button {
@@ -29,8 +25,8 @@
 }
 
 .homepage-search-bar {
-  width: 600px;
-  margin-left: 390px;
+  width: 70%;
+  max-width: 600px;
   position: relative;
   display: flex;
   align-items: center;
@@ -66,12 +62,11 @@
 .homepage-tutors-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  justify-items: center;
+  width: 80%;
+  box-sizing: border-box;
   background-color: white;
   gap: 50px;
-  justify-content: center;
-  max-width: 1200px;
-  margin-left: 80px;
-  margin-right: 80px;
 }
 
 .course-search-input {
